--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "prettier -w src/js/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
-    "test": "npm run test-unit",
+    "test": "npm run test-unit && npm run test-e2e-cli",
     "test-unit": "jest",
     "test-cypress": "npm run test-e2e",
     "test-e2e": "cypress open",
+    "test-e2e-cli": "cypress run",
     "prepare": "husky install"
   },
   "keywords": [],
