--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@main
       - name: Install Dependencies
         run: npm i
-      - name: Build SASS
+      - name: build SASS
         run: npm run Build
       - name: run cypress tests with electron
         uses: cypress-io/github-action@v4
