--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/checkout@main
       - name: Install Dependencies
         run: npm i
-      - name: build SASS
-        run: npm run Build
+      - name: Build SASS
+        run: npm run build
       - name: run cypress tests with electron
         uses: cypress-io/github-action@v4
         with:
