--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -17,6 +17,6 @@ jobs:
       - name: run cypress tests with electron
         uses: cypress-io/github-action@v4
         with:
-          start: npm run dev
+          start: npm run test-e2e-cli
           wait-on: "https://127.0.0.1:5501/"
           browser: electron
