--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -18,5 +18,5 @@ jobs:
         uses: cypress-io/github-action@v4.2.0
         with:
           start: npm run dev
-          wait-on: "https://127.0.0.1:8080/"
+          wait-on: "URL"
           browser: electron
